--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,12 +7,17 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-  <div class="celcius">
-    <input type="radio" id='celcius' name='celcius' /><p>Celcius</p> 
+    <div class="container">
+    <div class="celcius">
+      <input type="radio" id='celcius' name='celcius' />
+      Celcius 
+      <input type="number" name='celcius' id='celcius'/>
     </div>
-  <div class="celcius">
-    <input type="radio" id='celcius' name='celcius' /><p>Celcius</p> 
+    <div class="farenheit">
+      <input type="radio" id='farenheit' name='farenheit' />
+      Farenheit 
+      <input type="number" name='farenheit' id='farenheit'/>
     </div>
-  
+</div>
   </body>
 </html>
