--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,18 +7,31 @@
     <link href="./style.css" rel="stylesheet">
   </head>
   <body>
+    <h1 align="center">Temperatuer Converter</h1>
     <div class="container">
-    <div class="celcius">
-      <input type="radio" id='celcius' name='celcius' />
-      Celcius 
-      <input type="number" name='celcius' id='celcius'/>
-    </div>
-    <div class="farenheit">
-      <input type="radio" id='farenheit' name='farenheit' />
-      Farenheit 
-      <input type="number" name='farenheit' id='farenheit'/>
-    </div>
+      <div class="celcius">
+        <input type="radio" id='celciusRadio' name='celcius' />
+        Celcius 
+        <input type="number" name='celcius' id='celcius'/>
+      </div>
+      <div class="farenheit">
+        <input type="radio" id='fahrenheitRadio' name='fahrenheit' />
+        Farenheit 
+        <input type="number" name='fahrenheit' id='fahrenheit'/>
+      </div>
       <button>Convert</button>
-</div>
+    </div>
+    <br>
+    <div class="output">
+      <div class="output1">
+      <input type="radio" id='celciusOutput'>
+          Celcius
+      </div>
+      <div class="output2">
+      <input type="radio" id='fahrenheitOutput'>
+         Fahrenheit 
+      </div>
+      
+    </div>
   </body>
 </html>
